fixed alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -81,7 +81,7 @@ h4 {
     background-size: cover;
     background-position: center;
     text-align: center;
-    padding: 4rem 1rem;
+    padding-top: 50px;
     position: relative;
 }
 
@@ -100,10 +100,15 @@ h4 {
     position: relative;
     z-index: 2;
     color: white;
+        max-width: 1200px;
+        margin: auto;
+        padding: 50px;
     text-align: left;
 }
 
 .hero-content a {
+    font-size: 4rem;
+    font-weight: 800;
     text-decoration: underline;
 }
 
@@ -169,6 +174,10 @@ h4 {
 
 
 @media screen and (max-width: 1050px) {
+    .hero-content {
+        max-width: 1050px;
+        margin: auto;
+    }
 
     .siteWrapper {
         max-width: 1050px;
